kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockermanager
  labels:
    app.kubernetes.io/name: dockermanager
